--- a/SunoSunao/app/src/main/AndroidManifest.xml
+++ b/SunoSunao/app/src/main/AndroidManifest.xml
@@ -4,12 +4,12 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-feature
-        android:name="android.hardware.camera.any"
-        android:required="true" />
-    <uses-feature
-        android:name="android.hardware.camera.autofocus"
-        android:required="false" />
+<!--    <uses-feature-->
+<!--        android:name="android.hardware.camera.any"-->
+<!--        android:required="true" />-->
+<!--    <uses-feature-->
+<!--        android:name="android.hardware.camera.autofocus"-->
+<!--        android:required="false" />-->
 
     <application
         android:allowBackup="true"
@@ -30,6 +30,7 @@
         <activity
             android:name=".PlayerActivity"
             android:theme="@style/FullScreen"
+            android:screenOrientation="portrait"
             android:parentActivityName=".MainActivity"
             />
         <activity android:name=".AlbumDetailActivity"></activity>
